--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<div></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="icon" href="./pkico.ico" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" media="screen" type="text/css" href="./style.css"/>
+    <title>El Turtle Pillow</title>
+</head>
+<body>
+
+    <div id="lodr"></div>
+    
+    <div class="pk-img">
+        <img src="./assets/pk/pkbg.png" alt="Pikchu background" class="item" id="pkbg" data="-10"/>
+        <img src="./assets/pk/pkcrcl.png" alt="Background circle" class="item" id="pkcrcl" data="-6"/>
+        <img src="./assets/pk/pkbgptc.png" alt="Background particles" class="item" id="pkbgptc" data="1"/>
+        <img src="./assets/pk/pkblu.png" alt="Pikchu blue" class="item" id="pkblu" data="4"/>
+        <img src="./assets/pk/pkylw.png" alt="Pikchu yellow" class="item" id="pkylw" data="7"/>
+        <img src="./assets/pk/pkgls.png" alt="Pikchu glass" class="item" id="pkgls" data="9"/>
+        <img src="./assets/pk/pkfrtptc.png" alt="Front particles" class="item" id="pkfrtptc" data="20"/>
+    </div>
+    
+    <script src="./script.js"></script>
+</body>
+</html>
